antlr-demo/src/main/java/learn/LibExpr.g4
grammar LibExpr; // Rename to distinguish from original
import CommonLexerRules; // includes all rules from CommonLexerRules.g4
/** The start rule; begin parsing here. */
prog: stat+ ;

stat: expr NEWLINE # printExpr
| ID '=' expr NEWLINE # assign
| NEWLINE # blank
;
expr: expr op=(MUL |DIV ) expr # MulDiv
| expr op=(ADD |SUB ) expr # AddSub
| INT # int
| ID # id
| '(' expr ')' # parens
;


test : SELECT;

SELECT : 'select';
MUL : '*' ; // assigns token name to '*' used above in grammar
DIV : '/' ;
ADD : '+' ;
SUB : '-' ;
